using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorParams
{
    public const string EAT = "eat";

    public const string MOVE = "Move";

    public const string Pattern_01 = "Pattern_01";
    public const string Pattern_02 = "Pattern_02";
    public const string Pattern_03 = "Pattern_03";
    public const string Pattern_04 = "Pattern_04";

    public const string ATTACK_1 = "Attack_1";
    public const string ATTACK_2 = "Attack_2";
    public const string ATTACK_3 = "Attack_3";

    public const string ANGELATTACK = "AngelAttack_01";

    public const string DEVIL_DASH_ATTACK = "DevilDashAttack";
    public const string DEVILATTACK_1 = "DevilAttack_01";
    public const string DEVILATTACK_2 = "DevilAttack_02";
    public const string DEVILATTACK_3 = "DevilAttack_03";
    public const string DEVILATTACK_4 = "DevilAttack_04";
    public const string DEVILATTACK_5 = "DevilAttack_05";

    public const string ANGEL_DASH_ATTACK = "AngelDashAttack";

    public const string SKILL_1 = "skill_1";
    public const string SKILL_2 = "skill_2";
    public const string SKILL_3 = "skill_3";
    public const string SKILL_4 = "skill_4";

    public const string LOOP = "loop";

    public const string DEATH = "Death";

    public const string ANI_NAME_SKILL_01 = "skill_01";
    public const string ANI_NAME_SKILL_02 = "skill_02";
    public const string ANI_NAME_SKILL_03 = "skill_03";
    public const string ANI_NAME_SKILL_04 = "skill_04";

    public const string GOLDENGOBLIN_HIT = "Hit";
}